--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,6 +114,7 @@ a {
   background: $blue-color;
   background-color: transparent;
   background-image: none;
+  z-index: 3;
 }
 .k-icon {
   width: 0px;
