--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -171,8 +171,27 @@
                 <span class="k-select">
                   <span class="k-icon k-i-arrow-s"></span>
                 </span>
+                <div class="drop-spacer"></div>
               </span>
-              <div class="dropdown">element one</div>
+              <div class="dropdown">
+                <div class="drop-group">
+                  <div class="checkbox drop-row">
+                    <span class="checkbox"></span>element one
+                  </div>
+                  <div class="checkbox drop-row">
+                    <span class="checkbox"></span>element two
+                  </div>
+                  <div class="checkbox drop-row">
+                    <span class="checkbox"></span>element three
+                  </div>
+                  <div class="checkbox drop-row">
+                    <span class="checkbox"></span>element four
+                  </div>
+                  <div class="checkbox drop-row">
+                    <span class="checkbox"></span>element five
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="filter-item" (click)="activate($event)">
               <div class="filter-label">Dates</div>
