closer, and leaving

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -176,19 +176,24 @@
               <div class="dropdown">
                 <div class="drop-group">
                   <div class="checkbox drop-row">
-                    <span class="checkbox"></span>element one
+                    <input type="checkbox" id="checkbox-1">
+                    <label for="checkbox-1" class="checkbox"></label>element one
                   </div>
                   <div class="checkbox drop-row">
-                    <span class="checkbox"></span>element two
+                  <input type="checkbox" id="checkbox-2">
+                    <label for="checkbox-2" class="checkbox"></label>element two
                   </div>
                   <div class="checkbox drop-row">
-                    <span class="checkbox"></span>element three
+                  <input type="checkbox" id="checkbox-3">
+                    <label for="checkbox-3" class="checkbox"></label>element three
                   </div>
                   <div class="checkbox drop-row">
-                    <span class="checkbox"></span>element four
+                  <input type="checkbox" id="checkbox-4">
+                    <label for="checkbox-" class="checkbox"></label>element four
                   </div>
                   <div class="checkbox drop-row">
-                    <span class="checkbox"></span>element five
+                  <input type="checkbox" id="checkbox-5">
+                    <label for="checkbox-1" class="checkbox"></label>element five
                   </div>
                 </div>
               </div>
