big change - new color!

--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -11,6 +11,7 @@ $tertiary-color-c: #02849e;
 $grey-lightest: #dcdcdc;
 $grey-lighter: #ccc;
 $grey-light: #999;
+$grey-dark: #686868;
 $grey-darker: #404040;
 $grey-darkest: #151515;
 
