--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -164,9 +164,9 @@
       <div class="overview-filters">
         <div class="filter-container">
           <div class="block-filters">
-            <div class="filter-item" (click)="activate($event)">
+            <div class="filter-item" >
               <div class="filter-label">Customer</div>
-              <span class="k-dropdown-wrap">
+              <span class="k-dropdown-wrap" (click)="activate($event)">
                 <span class="k-input">Select</span>
                 <span class="k-select">
                   <span class="k-icon k-i-arrow-s"></span>
