--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,9 +112,12 @@ a {
   background: $blue-color;
   background-color: transparent;
   background-image: none;
-  z-index: 3;
+  z-index: 4;
   display: grid;
   grid-template-columns: auto 22px;
+}
+.overview-filters .k-dropdown-wrap {
+  z-index: 6;
 }
 .k-icon {
   width: 0px;
