--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -164,7 +164,7 @@
       <div class="overview-filters">
         <div class="filter-container">
           <div class="block-filters">
-            <div class="filter-item" >
+            <div class="filter-item">
               <div class="filter-label">Customer</div>
               <span class="k-dropdown-wrap" (click)="activate($event)">
                 <span class="k-input">Select</span>
@@ -176,24 +176,28 @@
               <div class="dropdown">
                 <div class="drop-group">
                   <div class="checkbox drop-row">
-                    <input type="checkbox" id="checkbox-1">
-                    <label for="checkbox-1" class="checkbox"></label>element one
+                    <input type="checkbox" id="checkbox-1" />
+                    <label for="checkbox-1" class="checkbox">Element one</label>
                   </div>
                   <div class="checkbox drop-row">
-                  <input type="checkbox" id="checkbox-2">
-                    <label for="checkbox-2" class="checkbox"></label>element two
+                    <input type="checkbox" id="checkbox-2" />
+                    <label for="checkbox-2" class="checkbox">Element two</label>
                   </div>
                   <div class="checkbox drop-row">
-                  <input type="checkbox" id="checkbox-3">
-                    <label for="checkbox-3" class="checkbox"></label>element three
+                    <input type="checkbox" id="checkbox-3" />
+                    <label for="checkbox-3" class="checkbox"
+                      >Element three</label
+                    >
                   </div>
                   <div class="checkbox drop-row">
-                  <input type="checkbox" id="checkbox-4">
-                    <label for="checkbox-" class="checkbox"></label>element four
+                    <input type="checkbox" id="checkbox-4" />
+                    <label for="checkbox-" class="checkbox">Element four</label>
                   </div>
                   <div class="checkbox drop-row">
-                  <input type="checkbox" id="checkbox-5">
-                    <label for="checkbox-1" class="checkbox"></label>element five
+                    <input type="checkbox" id="checkbox-5" />
+                    <label for="checkbox-1" class="checkbox"
+                      >Element five</label
+                    >
                   </div>
                 </div>
               </div>
