--- a/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -86,6 +86,10 @@
       align-items: center;
       gap: 5px;
       margin-left: 10px;
+
+      .k-input {
+        color: $black;
+      }
     }
 
     //Temporary theme for Kendo UI drop downs
