--- a/src/styles.scss
+++ b/src/styles.scss
@@ -131,7 +131,7 @@ a {
   font-size: 0px;
 }
 .filter-container.filter-apply .filtered-item .k-input:before {
-  content: 'Selected Item';
+  content: '(4) Selected Item';
   display: inline-block;
   font-size: 12px;
 }
